[project]
name = "hyperspectral-image-classification-cacftnet-tgrs2024"
version = "0.1.0"
description = "CACFTNet: A Hybrid Cov-Attention and Cross-Layer Fusion Transformer Network for Hyperspectral Image Classification"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "einops>=0.3.0",
    "matplotlib>=3.3.0",
    "numpy>=1.19.0",
    "scikit-learn>=0.23.0",
    "scipy>=1.5.0",
    "seaborn>=0.11.0",
    "torch>=1.6.0",
]

[project.urls]
Repository = "https://github.com/CCRG-XJU/Hyperspectral-Image-Classification_CACFTNet_TGRS2024"
